--- a/front/package.json
+++ b/front/package.json
@@ -1,12 +1,14 @@
 {
   "name": "front",
+  "homepage":".",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8000",
+  "proxy": "http://localhost:3030",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "http-proxy-middleware": "^2.0.6",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
